<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etxtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtvTitle"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etxtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txtvDescription"
        android:inputType="textLongMessage"
        android:paddingBottom="8dp"
        app:met_floatingLabel="highlight" />

    <!--<com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etxtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtvDate"
        android:inputType="datetime"
        android:paddingTop="8dp"
        app:met_floatingLabel="highlight" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/btnCalcel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/btnSave" />
    </LinearLayout>

</LinearLayout>